PTTG-369: Add Basic Auth header on REST call to pttg-ip-hmrc-access-code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,8 @@ spring.jmx.enabled=false
 #
 base.hmrc.access.code.url=https://localhost:8086
 
+hmrc.access.service.auth=pttg-rps-scheduler:abc123
+
 #
 # refresh interval in milliseconds, 3600000 = 1hr
 #
