--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,14 @@ buildscript {
   }
   repositories {
     mavenCentral()
+    maven {
+      url "https://plugins.gradle.org/m2/"
+    }
+
   }
   dependencies {
     classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    classpath 'net.researchgate:gradle-release:2.6.0'
   }
 }
 
@@ -25,6 +30,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'checkstyle'
 apply plugin: 'findbugs'
 apply plugin: 'jacoco'
+apply plugin: 'net.researchgate.release'
 
 checkstyle {
   ignoreFailures = false
@@ -83,3 +89,12 @@ dependencies {
 
 }
 gradle.startParameter.continueOnFailure = false
+
+release {
+    git {
+        requireBranch = /master|add-semantic-versioning/
+    }
+    preTagCommitMessage = '[Gradle Release Plugin] (EE-9726) - pre tag commit: '
+    tagCommitMessage = '[Gradle Release Plugin] (EE-9726) - creating tag: '
+    newVersionCommitMessage = '[Gradle Release Plugin] (EE-9726) - new version commit: '
+}
